# genai-systems-lab

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  stream-requests.txt  vercel.json
.data/: genai_systems_lab.db
.github/: dependabot.yml  gitleaks.toml
.playwright-mcp/: page-2026-03-31T05-26-49-105Z.yml  page-2026-03-31T05-28-19-373Z.yml  page-2026-03-31T05-28-45-221Z.yml  page-2026-03-31T05-29-03-948Z.yml  page-2026-03-31T05-29-40-228Z.yml  page-2026-03-31T05-31-55-359Z.yml  page-2026-03-31T05-31-56-852Z.yml  page-2026-03-31T05-32-36-169Z.yml  page-2026-03-31T05-32-55-545Z.yml
crew-content-pipeline/: README.md  architecture.md  tasks.md
crew-hiring-system/: README.md  architecture.md  tasks.md
crew-investment-analyst/: README.md  architecture.md  tasks.md
crew-product-launch/: README.md  architecture.md  tasks.md
crew-startup-simulator/: README.md  architecture.md  tasks.md
docs/: comparison.md
genai-browser-agent/: README.md  architecture.md  tasks.md
genai-clinical-assistant/: README.md  tasks.md
genai-code-copilot/: README.md  architecture.md  tasks.md
genai-doc-intelligence/: README.md  tasks.md
genai-financial-analyst/: README.md  architecture.md  tasks.md
genai-interviewer/: README.md  architecture.md  tasks.md
genai-knowledge-os/: README.md  architecture.md  tasks.md
genai-nl2sql-agent/: README.md  architecture.md  tasks.md
genai-research-system/: README.md  architecture.md  eval.py  tasks.md
genai-ui-builder/: README.md  architecture.md  tasks.md
langgraph-data-analyst/: .env.example  README.md  requirements.txt
lg-data-agent/: README.md  architecture.md  tasks.md
lg-debugging-agent/: README.md  architecture.md  tasks.md
lg-research-agent/: README.md  (+2 more)
(+327 files in other folders)
