[project]
name = "genai-systems-lab"
version = "1.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
	"fastapi==0.135.2",
	"starlette==0.52.1",
	"google-genai==1.69.0",
	"langgraph==1.1.3",
	"python-dotenv==1.1.1",
	"pydantic==2.11.10",
	"duckdb==1.5.1",
	"sqlalchemy==2.0.48",
	"pandas==3.0.1",
	"rich==14.3.3",
	"numpy==2.3.3",
]

[project.scripts]
app = "shared.api.app:app"
