[project]
name = "genai-systems-lab"
version = "1.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
	"fastapi==0.135.2",
	"starlette==0.52.1",
	"google-genai==1.69.0",
	"langgraph==1.1.3",
	"python-dotenv==1.1.1",
	"pydantic==2.11.10",
	"duckdb==1.5.1",
	"sqlalchemy==2.0.48",
	"pandas==3.0.1",
	"rich==14.3.3",
	"numpy==2.3.3",
	"httpx==0.28.1",
	"langfuse>=4.3.1",
	"PyJWT==2.12.1",
]

# Optional extras — keep the default install slim.  Browser automation pulls
# in the ~400 MB Playwright driver + Chromium; it is only needed by the
# ``genai-browser-agent`` project.
[project.optional-dependencies]
browser = [
	"playwright==1.58.0",
]
crew = [
	"crewai==1.12.2",
]

[project.scripts]
app = "shared.api.app:app"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
	"E",      # pycodestyle errors
	"F",      # pyflakes
	"I",      # isort
	"B",      # flake8-bugbear
	"UP",     # pyupgrade
	"SIM",    # flake8-simplify
	"S",      # flake8-bandit (security)
	"RUF",    # ruff-specific
]
ignore = [
	"E501",   # line length is handled by the formatter
	"S101",   # asserts are OK in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]
"benchmarks/**/*.py" = ["S"]

[tool.bandit]
exclude_dirs = ["tests", "benchmarks", "portfolio", "langgraph-data-analyst"]
skips = ["B101"]
